syntax = "proto3";
package proto;

import "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "github.com/gravitational/teleport/lib/services/types.proto";
import "github.com/gravitational/teleport/lib/events/events.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = true;

// Operation identifies type of operation
enum Operation {
    // INIT is sent as a first sentinel event
    // on the watch channel
    INIT = 0;
    // PUT identifies created or updated object
    PUT = 1;
    // DELETE identifies deleted object
    DELETE = 2;
}

// Event returns cluster event
message Event {
    // Operation identifies operation
    Operation Type = 1 [ (gogoproto.jsontag) = "type,omitempty" ];
    // Resource contains the updated resource
    oneof Resource {
        // ResourceHeader is specified in delete events,
        // the full object is not available, so resource
        // header is used to provide information about object type
        services.ResourceHeader ResourceHeader = 2 [ (gogoproto.jsontag) = "resource,omitempty" ];
        // CertAuthority is filled in certificate-authority related events
        services.CertAuthorityV2 CertAuthority = 3
            [ (gogoproto.jsontag) = "cert_authority,omitempty" ];
        // StaticTokens is filled in static-tokens related events
        services.StaticTokensV2 StaticTokens = 4
            [ (gogoproto.jsontag) = "static_tokens,omitempty" ];
        // ProvisionToken is filled in provision-token related events
        services.ProvisionTokenV2 ProvisionToken = 5
            [ (gogoproto.jsontag) = "provision_token,omitempty" ];
        // ClusterNameV2 is a cluster name resource
        services.ClusterNameV2 ClusterName = 6 [ (gogoproto.jsontag) = "cluster_name,omitempty" ];
        // ClusterConfig is a cluster configuration resource
        services.ClusterConfigV3 ClusterConfig = 7
            [ (gogoproto.jsontag) = "cluster_config,omitempty" ];
        // User is a user resource
        services.UserV2 User = 8 [ (gogoproto.jsontag) = "user,omitempty" ];
        // Role is a role resource
        services.RoleV3 Role = 9 [ (gogoproto.jsontag) = "role,omitempty" ];
        // Namespace is a namespace resource
        services.Namespace Namespace = 10 [ (gogoproto.jsontag) = "namespace,omitempty" ];
        // Server is a node or proxy resource
        services.ServerV2 Server = 11 [ (gogoproto.jsontag) = "server,omitempty" ];
        // ReverseTunnel is a resource with reverse tunnel
        services.ReverseTunnelV2 ReverseTunnel = 12
            [ (gogoproto.jsontag) = "reverse_tunnel,omitempty" ];
        // TunnelConnection is a resource for tunnel connnections
        services.TunnelConnectionV2 TunnelConnection = 13
            [ (gogoproto.jsontag) = "tunnel_connection,omitempty" ];
        // AccessRequest is a resource for access requests
        services.AccessRequestV3 AccessRequest = 14
            [ (gogoproto.jsontag) = "access_request,omitempty" ];
    }
}

// Watch specifies watch parameters
message Watch {
    // Kinds specifies object kinds to watch
    repeated WatchKind Kinds = 1
        [ (gogoproto.nullable) = false, (gogoproto.jsontag) = "kinds,omitempty" ];
}

// WatchKind specifies resource kind to watch
message WatchKind {
    // Kind is a resource kind to watch
    string Kind = 1 [ (gogoproto.jsontag) = "kind" ];
    // LoadSecrets specifies whether to load secrets
    bool LoadSecrets = 2 [ (gogoproto.jsontag) = "load_secrets" ];
    // Name is an optional specific resource type to watch,
    // if specified only the events with a specific resource
    // name will be sent
    string Name = 3 [ (gogoproto.jsontag) = "name" ];
    // Filter is an optional mapping of custom filter parameters.
    // Valid values vary by resource kind.
    map<string, string> Filter = 4 [ (gogoproto.jsontag) = "filter,omitempty" ];
}

// Set of certificates corresponding to a single public key.
message Certs {
    // SSH X509 cert (PEM-encoded).
    bytes SSH = 1 [ (gogoproto.jsontag) = "ssh,omitempty" ];
    // TLS X509 cert (PEM-encoded).
    bytes TLS = 2 [ (gogoproto.jsontag) = "tls,omitempty" ];
}

// UserCertRequest specifies certificate-generation parameters
// for a user.
message UserCertsRequest {
    // PublicKey is a public key to be signed.
    bytes PublicKey = 1 [ (gogoproto.jsontag) = "public_key" ];
    // Username of key owner.
    string Username = 2 [ (gogoproto.jsontag) = "username" ];
    // Expires is a desired time of the expiry of the certificate, could
    // be adjusted based on the permissions
    google.protobuf.Timestamp Expires = 3 [
        (gogoproto.stdtime) = true,
        (gogoproto.nullable) = false,
        (gogoproto.jsontag) = "expires,omitempty"
    ];
    // Format encodes the desired SSH Certificate format (either old ssh
    // compatibility
    // format to remove some metadata causing trouble with old SSH servers)
    // or standard SSH cert format with custom extensions
    string Format = 4 [ (gogoproto.jsontag) = "format,omitempty" ];
    // RouteToCluster is an optional cluster name to add to the certificate,
    // so that requests originating with this certificate will be redirected
    // to this cluster
    string RouteToCluster = 5 [ (gogoproto.jsontag) = "route_to_cluster,omitempty" ];
    // AccessRequests is an optional list of request IDs indicating requests whose
    // escalated privileges should be added to the certificate.
    repeated string AccessRequests = 6 [ (gogoproto.jsontag) = "access_requests,omitempty" ];
}

// GetUserRequest specifies parameters for the GetUser method.
message GetUserRequest {
    // Name is the name of the desired user.
    string Name = 1 [ (gogoproto.jsontag) = "name" ];
    // WithSecrets specifies whether to load associated secrets.
    bool WithSecrets = 2 [ (gogoproto.jsontag) = "with_secrets,omitempty" ];
}

// GetUsersRequest specifies parameters for the GetUsers method.
message GetUsersRequest {
    // WithSecrets specifies whether to load associated secrets.
    bool WithSecrets = 1 [ (gogoproto.jsontag) = "with_secrets" ];
}

// AccessRequests is a collection of AccessRequest values.
message AccessRequests {
    repeated services.AccessRequestV3 AccessRequests = 1
        [ (gogoproto.jsontag) = "access_requests" ];
}

// PluginDataSeq is a sequence of plugin data.
message PluginDataSeq {
    repeated services.PluginDataV3 PluginData = 1 [ (gogoproto.jsontag) = "plugin_data" ];
}

// RequestStateSetter encodes the paramters necessary to update the
// state of a privilege escalation request.
message RequestStateSetter {
    // ID is the request ID being targeted
    string ID = 1 [ (gogoproto.jsontag) = "id" ];
    // State is the desired state to be set
    services.RequestState State = 2 [ (gogoproto.jsontag) = "state" ];
    // Delegator is an optional indicator of who delegated this
    // state update (used by plugins to indicate which user approved
    // or denied the request).
    string Delegator = 3 [ (gogoproto.jsontag) = "delegator,omitempty" ];
}

// RequestID is the unique identifier of an access request.
message RequestID { string ID = 1 [ (gogoproto.jsontag) = "id" ]; }

// RotateResetPasswordTokenSecretsRequest is a request to rotate token secrets.
message RotateResetPasswordTokenSecretsRequest {
    string TokenID = 1 [ (gogoproto.jsontag) = "token" ];
}

// GetResetPasswordTokenRequest is a request to get a reset password token.
message GetResetPasswordTokenRequest { string TokenID = 1 [ (gogoproto.jsontag) = "token" ]; }

// CreateResetPasswordTokenRequest is a request to create an instance of
// ResetPasswordToken
message CreateResetPasswordTokenRequest {
    // Name is the user name.
    string Name = 1 [ (gogoproto.jsontag) = "name" ];
    // Type is a token type.
    string Type = 2 [ (gogoproto.jsontag) = "type" ];
    // TTL specifies how long the generated token is valid for.
    int64 TTL = 3 [ (gogoproto.jsontag) = "ttl", (gogoproto.casttype) = "Duration" ];
}

// PingRequest is the input value for the Ping method.
message PingRequest {
    // Ping method currently takes no parameters
}

// PingResponse contains data about the teleport auth server.
message PingResponse {
    // ClusterName is the name of the teleport cluster.
    string ClusterName = 1 [ (gogoproto.jsontag) = "cluster_name" ];
    // ServerVersion is the version of the auth server.
    string ServerVersion = 2 [ (gogoproto.jsontag) = "server_version" ];
}

// DeleteUserRequest is the input value for the DeleteUser method.
message DeleteUserRequest {
    // Name is the user name to delete.
    string Name = 1 [ (gogoproto.jsontag) = "name" ];
}

// AuditStreamRequest contains stream request - event or stream control request
message AuditStreamRequest {
    // Request is either stream request - create, resume or complete stream
    // or event submitted as a part of the stream
    oneof Request {
        // CreateStream creates the stream for session ID
        // should be the first message sent to the stream
        CreateStream CreateStream = 1;
        // ResumeStream resumes existing stream, should be the
        // first message sent to the stream
        ResumeStream ResumeStream = 2;
        // CompleteStream completes the stream
        CompleteStream CompleteStream = 3;
        // FlushAndClose flushes and closes the stream
        FlushAndCloseStream FlushAndCloseStream = 4;
        // Event contains the stream event
        events.OneOf Event = 5;
    }
}

// AuditStreamStatus returns audit stream status
// with corresponding upload ID
message AuditStreamStatus {
    // UploadID is upload ID associated with the stream,
    // can be used to resume the stream
    string UploadID = 1;
}

// CreateStream creates stream for a new session ID
message CreateStream { string SessionID = 1; }

// ResumeStream resumes stream that was previously created
message ResumeStream {
    // SessionID is a session ID of the stream
    string SessionID = 1;
    // UploadID is upload ID to resume
    string UploadID = 2;
}

// CompleteStream completes the stream
// and uploads it to the session server
message CompleteStream {}

// FlushAndCloseStream flushes the stream data and closes the stream
message FlushAndCloseStream {}

// AuthService is authentication/authorization service implementation
service AuthService {
    // SendKeepAlives allows node to send a stream of keep alive requests
    rpc SendKeepAlives(stream services.KeepAlive) returns (google.protobuf.Empty);
    // WatchEvents returns a new stream of cluster events
    rpc WatchEvents(Watch) returns (stream Event);
    // UpsertNode upserts node
    rpc UpsertNode(services.ServerV2) returns (services.KeepAlive);
    // GenerateUserCerts generates a set of user certificates for use by `tctl
    // auth sign`.
    rpc GenerateUserCerts(UserCertsRequest) returns (Certs);
    // GetUser gets a user resource by name.
    rpc GetUser(GetUserRequest) returns (services.UserV2);
    // GetUsers gets all current user resources.
    rpc GetUsers(GetUsersRequest) returns (stream services.UserV2);
    // GetAccessRequests gets all pending access requests.
    rpc GetAccessRequests(services.AccessRequestFilter) returns (AccessRequests);
    // CreateAccessRequest creates a new access request.
    rpc CreateAccessRequest(services.AccessRequestV3) returns (google.protobuf.Empty);
    // DeleteAccessRequest deletes an access request.
    rpc DeleteAccessRequest(RequestID) returns (google.protobuf.Empty);
    // SetAccessRequestState sets the state of an access request.
    rpc SetAccessRequestState(RequestStateSetter) returns (google.protobuf.Empty);
    // GetPluginData gets all plugin data matching the supplied filter.
    rpc GetPluginData(services.PluginDataFilter) returns (PluginDataSeq);
    // UpdatePluginData updates a plugin's resource-specific datastore.
    rpc UpdatePluginData(services.PluginDataUpdateParams) returns (google.protobuf.Empty);
    // Ping gets basic info about the auth server. This method is intended
    // to mimic the behavior of the proxy's Ping method, and may be used by
    // clients for verification or configuration on startup.
    rpc Ping(PingRequest) returns (PingResponse);
    // RotateResetPasswordTokenSecrets rotates token secrets for a given tokenID.
    rpc RotateResetPasswordTokenSecrets(RotateResetPasswordTokenSecretsRequest)
        returns (services.ResetPasswordTokenSecretsV3);
    // GetResetPasswordToken returns a token.
    rpc GetResetPasswordToken(GetResetPasswordTokenRequest) returns (services.ResetPasswordTokenV3);
    // CreateResetPasswordToken creates ResetPasswordToken.
    rpc CreateResetPasswordToken(CreateResetPasswordTokenRequest)
        returns (services.ResetPasswordTokenV3);
    // CreateUser inserts a new user entry to a backend.
    rpc CreateUser(services.UserV2) returns (google.protobuf.Empty);
    // UpdateUser updates an existing user in a backend.
    rpc UpdateUser(services.UserV2) returns (google.protobuf.Empty);
    // DeleteUser deletes an exisitng user in a backend by username.
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
    // EmitAuditEvent emits audit event
    rpc EmitAuditEvent(events.OneOf) returns (google.protobuf.Empty);
    // CreateAuditStream creates or resumes audit events streams
    rpc CreateAuditStream(stream AuditStreamRequest) returns (stream events.StreamStatus);
}
